we change text and text color and background on moh branch

--- a/moh.html
+++ b/moh.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <script src="app.js"></script>
-    <h1>hello mohamed adel</h1>
+    <h1>this is new btanch</h1>
 </body>
 </html>
