added form to home page

--- a/moh.html
+++ b/moh.html
@@ -10,5 +10,12 @@
 <body>
     <script src="app.js"></script>
     <h1>this is new btanch</h1>
+    <h2>Subdcribe</h2> 
+    <form>
+        <label for="email">Email:</label>
+        <input type="email" id="email">
+        <input type="submit" value="Subdcribe">
+
+    </form>
 </body>
 </html>
